2009-01-27  Matthias Claesen <mclasen@redhat.com>

	* src/core/edge-resistance.c: some lists failed to keep track
          of their contents and therefore didn't free correctly.
          Closes #552303.

2009-01-27  Matthias Claesen <mclasen@redhat.com>

	* src/core/prefs.c: Free name of old theme when new theme
          is loaded.  Closes #552973.

2009-01-27  Matthias Claesen <mclasen@redhat.com>

	* src/ui/ui.c: free the result of gdk_text_property_to_utf8_list()
          even when it returns no data.

2009-01-27  Owen Taylor  <otaylor@redhat.com>

       GtkStyle is specific to a particular colormap. Metacity
       uses different colormaps for windows with different
       visuals, so it must specialize the GtkStyle.

       Closes #568365 and #513944.

       * src/ui/frames.[ch]: Keep a GtkStyle for each MetaUIFrame, which is
         obtained by calling gtk_style_attach() on the style for the
         MetaFrames. When the style of the MetaFrames changes, reattach
         everything. When we call gtk_style_set_background() pass in the
         right style.

       * src/ui/themes.[ch]: Create a _with_style() variant of functions that
         previously took the style from widget->style passed in, so we
         can draw with the right style for the colormap.

2009-01-27  Thomas Thurman  <tthurman@gnome.org>

        Added a gconf key to swap the meanings of the right and
        middle buttons when the modifier key is held down.
        Closes #437910.  Thanks to Matt Kraai for looking over
        the patch.

	* src/core/display.c:
	* src/core/prefs.c:
	* src/include/prefs.h:
	* src/metacity.schemas.in.in:

2009-01-27  Thomas Thurman  <tthurman@gnome.org>

        All the window properties are now handled using simple
        window property handlers.  Closes #549886.

	* src/core/window-private.h:
	* src/core/window-props.c:
	* src/core/window.c:

2009-01-26  Thomas Thurman  <tthurman@gnome.org>
