@@ -1,3 +1,12 @@
+2009-01-29  Thomas Thurman  <tthurman@gnome.org>
+
+        Window properties are looked up in a hash table rather than
+        by iteration over an array.  Saves ~44us per window, but
+        also makes the code cleaner.
+
+	* src/core/display-private.h:
+	* src/core/window-props.c:
+
 2009-01-27  Matthias Claesen <mclasen@redhat.com>
 
 	* src/core/edge-resistance.c: some lists failed to keep track
